finished users controler, added protected states and nav bar

--- a/public/templates/users/usersIndex.html
+++ b/public/templates/users/usersIndex.html
@@ -2,8 +2,10 @@
   <h1>Users Index</h1>
   <ul>
     <li ng-repeat="user in usersIndex.all">
+      <a ui-sref="usersShow({ id: user.id })"><div>
       <h2>{{ user.username }}</h2>
       <h4>{{ user.email }}</h4>
+    </div></a>
     </li>
   </ul>
 </section>
