--- a/src/templates/galleries/galleriesNew.html
+++ b/src/templates/galleries/galleriesNew.html
@@ -21,6 +21,6 @@
       <textarea placeholder="Text goes here..." ng-model="galleriesNew.gallery.body"></textarea>
     </div>
 
-    <button>Update</button>
+    <button>Create</button>
   </form>
 </section>
