--- a/public/templates/galleries/galleriesIndex.html
+++ b/public/templates/galleries/galleriesIndex.html
@@ -11,7 +11,7 @@
   </ul>
 
   <br>
-  <button>Click here to add a new gallery</button>
+  <button ui-sref="galleriesNew">Click here to add a new gallery</button>
   <!-- <button ng-if="galleriesIndex.isUser()">Click here to add a new gallery</button> -->
 
 </section>
