--- a/src/templates/exhibitions/exhibitionsIndex.html
+++ b/src/templates/exhibitions/exhibitionsIndex.html
@@ -13,7 +13,7 @@
   </ul>
 
   <br>
-  <button>Click here to upload a new exhibition</button>
+  <button ui-sref="exhibitionsNew">Click here to upload a new exhibition</button>
   <!-- <button ng-if="galleriesIndex.isUser()">Click here to add a new gallery</button> -->
 
 </section>
