added comments model and controller to frontend

--- a/public/templates/reviews/reviewsShow.html
+++ b/public/templates/reviews/reviewsShow.html
@@ -1,4 +1,4 @@
-<section>
+<section ng-controller="ReviewsShowController as reviewsShow">
 
   <h1>Reviews Show</h1>
 
@@ -14,4 +14,6 @@
   <!-- <button ng-if="usersShow.isCurrentUser()" ui-sref="galleriesEdit({ id: galleriesShow.gallery.id})">Edit</button> -->
   <!-- <button ng-if="galleriesShow.isCurrentUser()" ng-click="galleriesShow.deleteGallery()">Delete</button> -->
 
+</section>
+<section ng-controller="CommentsNewController as commentsNew">
 </section>
