--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,7 @@
-<h1>HOMEPAGE ARTHUB</h1>
+<!-- <h1>HOMEPAGE ARTHUB</h1> -->
+<section id="homeBg">
 
+<h1 class="homeHead gals"><a ui-sref="galleriesIndex">Galleries</a></h1>
+<h1 class="homeHead"><a ui-sref="exhibitionsIndex">Exhibitions</a></h1>
 
-<a ui-sref="galleriesIndex">Galleries</a>
-<a ui-sref="exhibitionsIndex">Exhibitions</a>
-<a ui-sref="reviewsIndex">Reviews</a>
+</section>
